--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,7 @@
     "@monaco-editor/react": "^4.7.0",
     "axios": "^1.13.2",
     "lucide-react": "^0.554.0",
-    "next": "16.0.3",
+    "next": "^16.1.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "recharts": "^3.4.1",
